feat: add getContactoById endpoint.
